[package]
name = "decoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitcoin = { version = "0.30.1", features = ["rand"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0"
ordinals = "0.0.8"
anyhow = "1.0.40"
wasm-bindgen = "0.2.68"
serde-wasm-bindgen = "0.5"
hex = "0.4.3"
